Name:          hsPass
Version:       0.1
Category:      Example
Synopsis:      A simple password management solution written in Haskell

Build-Type:    Simple
Cabal-Version: >= 1.2

library
  exposed-modules: HSPass,
                   HSPass.Config,
                   HSPass.Config.Default,
                   HSPass.Database,
                   HSPass.Edit,
                   HSPass.Encryption,
                   HSPass.Passwords,
                   HSPass.Util,
                   HSPass.Actions.AutoType,
                   HSPass.Actions.Create,
                   HSPass.Actions.Delete,
                   HSPass.Actions.Modify,
                   HSPass.Actions.Reveal,
                   HSPass.Actions.Search
  build-depends:   base, dyre, xdg-basedir, bytestring, Crypto, utf8-string, directory, MaybeT, autotype, simple-dialog

executable hsPass
  main-is:         Main.hs
