Name:          hsPass
Version:       0.1
Category:      Example
Synopsis:      A simple password management solution written in Haskell

Build-Type:    Simple
Cabal-Version: >= 1.2

library
  exposed-modules: HSPass,
                   HSPass.Core,
                   HSPass.Core.Config,
                   HSPass.Core.Database,
                   HSPass.Core.Encryption,
                   HSPass.Core.Passwords,
                   HSPass.Common.Index,
                   HSPass.Common.Edit,
                   HSPass.Actions.AutoType,
                   HSPass.Actions.Create,
                   HSPass.Actions.Delete,
                   HSPass.Actions.Modify,
                   HSPass.Actions.Reveal,
                   HSPass.Actions.Search,
                   HSPass.Actions.Help
  build-depends:   base, dyre, xdg-basedir, bytestring, Crypto, utf8-string, directory, MaybeT, autotype, simple-dialog, xml

executable hsPass
  main-is:         Main.hs
